# QOBLIB

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  submission_support.yml
.github/PULL_REQUEST_TEMPLATE/: instance_addition.md  submission_results.md
.github/workflows/: pages.yml  tests.yml  update-bkv.yml  validate-submission-comment.yml  validate-submission.yml
01-marketsplit/misc/: sol2mdtable.py
01-marketsplit/solutions/: README.md
02-labs/solutions/: README.md  labs041.bst.sol  labs042.bst.sol  labs043.bst.sol  labs044.bst.sol  labs045.bst.sol  labs046.bst.sol  labs047.bst.sol  labs048.bst.sol  labs049.bst.sol  labs050.bst.sol  labs051.bst.sol  labs052.bst.sol  labs053.bst.sol  labs054.bst.sol  labs055.bst.sol  labs056.bst.sol  labs057.bst.sol  labs058.bst.sol  labs059.bst.sol  labs060.bst.sol  labs061.bst.sol  labs062.bst.sol  labs063.bst.sol  labs064.bst.sol  labs065.bst.sol  labs066.bst.sol  labs067.bst.sol  labs068.bst.sol  labs069.bst.sol  labs070.bst.sol  labs071.bst.sol  labs072.bst.sol  labs073.bst.sol  labs074.bst.sol  labs075.bst.sol  labs076.bst.sol  labs077.bst.sol  labs078.bst.sol  labs079.bst.sol  (+21 more)
03-birkhoff/misc/: get_zimpl_permutations.sh  json2mdtable.py
03-birkhoff/solutions/: README.md
misc/: CHECKER_CONTRACT.md  README.md  check_bkv_updates.py  check_submission.py  pyproject.toml  update_bkv.py
misc/ci/: CHECKER_CONTRACT.md  README.md  check_bkv_updates.py  check_submission.py  comment_template.md  generate_all_readmes.sh  local-ci.sh  render_comment.py  update_bkv.py
misc/ci/site_builder/: solutions.py
misc/site_builder/: landscape.py
misc/tools/: README.md  add_licence.py  convert_info_to_md.py  convert_lp2qubo.py  convert_solution_to_active.py  generate_problem_figures.py  get_metrics.py  mdutils.py  rename_sol_files.sh  simplify_qubo.py
tests/: test_build_site.py  test_charts.py  test_html_pages.py  test_landscape.py
website/: index.html  problems.html
(+211 files in other folders)
